# iraab-service

./: README.md  docker.sh  start.sh
flask_app/: Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
flask_app/app/: gunicorn_conf.py  main.py
